--- a/app/views/creatures/index.html.erb
+++ b/app/views/creatures/index.html.erb
@@ -1,1 +1,11 @@
-<h1>Hello, Rails!</h1>
+<h1>Creatures</h1>
+
+<ul>
+  <% @creatures.each do |creature| %>
+    <li>
+      <%= link_to creature.name, creature %>
+    </li>
+  <% end %>  
+</ul>
+
+<%= link_to "New Creature", new_creature_path %>
