--- a/app/views/creatures/_small_card.html.erb
+++ b/app/views/creatures/_small_card.html.erb
@@ -1,6 +1,6 @@
 <li>
   <%= link_to creature_path(creature) do %>
-    <div class="px-3 py-2 bg-slate-200 rounded-md w-1/3">
+    <div class="px-3 py-2 bg-indigo-100 rounded-md w-1/2">
       <%= creature.name %>
     </div>
   <% end %>
