--- a/app/views/creatures/show.html.erb
+++ b/app/views/creatures/show.html.erb
@@ -1,14 +1,31 @@
-<h1><%= @creature.name %></h1>
+<header class="pb-3">
+  <h1><%= @creature.name %></h1>
+</header>
 
-<ul>
-  <li><%= @creature.kind %></li>
-  <li><%= @creature.description%></li>
-</ul>
+<div class="flex flex-col w-1/2 gap-3">
+  <div class="flex flex-row items-center gap-2">
+    <div class="w-1/3 text-sm text-right font-semibold">
+      Kind
+    </div>
+    <div class="w-2/3 py-2 px-3 rounded-md border border-slate-500">
+      <%= @creature.kind %>
+    </div>
+  </div>
 
-<ul>
-  <li><%= link_to "Edit", edit_creature_path(@creature) %></li>
-  <li><%= link_to "Destroy", creature_path(@creature), data: {
-    turbo_method: :delete,
-    turbo_confirm: "Are you sure?"
-  } %></li>
-</ul>
+  <div class="flex flex-row items-center gap-2">
+    <div class="w-1/3 text-sm text-right font-semibold">
+      Description
+    </div>
+    <div class="w-2/3 py-2 px-3 rounded-md border border-slate-500">
+      <%= @creature.description%>
+    </div>
+  </div>
+
+  <div class="pt-3 flex flex-row items-center gap-2 w-min place-self-center">
+    <%= link_to "Edit", edit_creature_path(@creature), class: "w-24 py-2 px-3 bg-indigo-500 rounded-full text-white text-sm text-center font-semibold" %>
+    <%= link_to "Destroy", creature_path(@creature), data: {
+        turbo_method: :delete,
+        turbo_confirm: "Are you sure?"
+      }, class: "w-24 py-2 px-3 bg-indigo-500 rounded-full text-white text-sm text-center font-semibold" %>
+  </div>
+</div>
