--- a/app/views/creatures/show.html.erb
+++ b/app/views/creatures/show.html.erb
@@ -5,9 +5,18 @@
 <div class="flex flex-col w-1/2 gap-3">
   <div class="flex flex-row items-center gap-2">
     <div class="w-1/3 text-sm text-right font-semibold">
+      Name
+    </div>
+    <div class="w-2/3 py-2 px-3 rounded-md">
+      <%= @creature.name %>
+    </div>
+  </div>
+
+  <div class="flex flex-row items-center gap-2">
+    <div class="w-1/3 text-sm text-right font-semibold">
       Kind
     </div>
-    <div class="w-2/3 py-2 px-3 rounded-md border border-slate-500">
+    <div class="w-2/3 py-2 px-3 rounded-md">
       <%= @creature.kind %>
     </div>
   </div>
@@ -16,16 +25,16 @@
     <div class="w-1/3 text-sm text-right font-semibold">
       Description
     </div>
-    <div class="w-2/3 py-2 px-3 rounded-md border border-slate-500">
+    <div class="w-2/3 py-2 px-3 rounded-md">
       <%= @creature.description%>
     </div>
   </div>
 
   <div class="pt-3 flex flex-row items-center gap-2 w-min place-self-center">
-    <%= link_to "Edit", edit_creature_path(@creature), class: "w-24 py-2 px-3 bg-indigo-500 rounded-full text-white text-sm text-center font-semibold" %>
+    <%= link_to "Edit", edit_creature_path(@creature), class: "py-2 px-5 bg-indigo-500 rounded-full text-white text-sm text-center font-semibold" %>
     <%= link_to "Destroy", creature_path(@creature), data: {
         turbo_method: :delete,
         turbo_confirm: "Are you sure?"
-      }, class: "w-24 py-2 px-3 bg-indigo-500 rounded-full text-white text-sm text-center font-semibold" %>
+      }, class: "py-2 px-5 bg-indigo-500 rounded-full text-white text-sm text-center font-semibold" %>
   </div>
 </div>
