--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,19 @@
   </head>
 
   <body>
+    <nav class="bg-gray-800">
+      <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
+        <div class="relative flex h-16 items-center justify-between">
+          <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
+            <div class="hidden">
+              <div class="flex space-x-4">
+                <a href="<%= root_path %>" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Home</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
     <main class="container mx-auto mt-28 px-5 flex flex-col">
       <%= yield %>
     </main>
